# Yanni

./: .gitignore  CMakeLists.txt  Yanni.sln  prof.ncu-rep
Yanni/: CMakeLists.txt  Yanni.cpp  Yanni.h  Yanni.vcxproj  Yanni.vcxproj.filters  activationFunctions.cpp  activationFunctions.h  activationFunctionsCuda.cu  activationFunctionsCuda.cuh  cudaClass.cu  enums.h  gradientFunctions.h  gradientFunctionsCuda.cuh  layer.cpp  layer.h  layerCuda.cuh  loss.txt  lossFunctions.cpp  lossFunctions.h  lossFunctionsCuda.cu  lossFunctionsCuda.cuh  mnistData.h  netConfig.json  neuNetCuda.cu  neuralNetwork.cpp  neuralNetwork.h  neuralNetworkCuda.cuh  ode_homework.m  ramdom.cu  readMnist.cpp  readMnist.h  statisticFunctions.cpp  statisticFunctions.h  statisticFunctionsCuda.cuh  workerThread.cpp  workerThread.h
Yanni/cuda/: CMakeLists.txt  activationFunctionsCuda.cu  activationFunctionsCuda.cuh  enumsCuda.cuh  layerCuda.cuh  learningRateFunctionsCuda.cuh  lossFunctionsCuda.cu  lossFunctionsCuda.cuh  neuNetCuda.cu  neuNetCuda.h  neuralNetworkCuda.cuh
Yanni/include/: CMakeLists.txt  layer.h  learningRateFunctions.h  lossFunctions.h  neuralNetwork.h  readMnist.h  statisticFunctions.h
Yanni/src/: CMakeLists.txt  activationFunctions.cpp  layer.cpp  learningRateFunctions.cpp  lossFunctions.cpp  neuralNetwork.cpp  readMnist.cpp  statisticFunctions.cpp  workerThread.cpp
